--- a/src/sass/_article.sass
+++ b/src/sass/_article.sass
@@ -57,10 +57,9 @@
 				animation: is-open 1s ease 0s
 				padding-bottom: 15px
 				
-
 				&:before
-					animation: line-open 2s ease 0s
-
+					animation: line-open 1.5s ease forwards 0.5s
+		
 			.list__title:after
 				transform: rotate(-45deg)
 				transition: transform 1s ease 0s
@@ -88,7 +87,7 @@
 		&:before
 			content: ''
 			display: block
-			width: 100%
+			width: 0%
 			height: 2px
 			background: #c70000
 
