--- a/src/sass/_article.sass
+++ b/src/sass/_article.sass
@@ -92,13 +92,14 @@
 			background: #c70000
 
 	&__desc
-		padding: 13px 75px 20px 26px
-		height: 115px
+		padding: 13px 75px 0px 26px
+		height: 110px
 		overflow: hidden
 
 	&__link
 		padding-left: 26px
 		color: #c70000
+		line-height: 40px
 
 
 		&:hover
@@ -169,12 +170,12 @@
 		opacity: 0
 	100% 
 		opacity: 1
-		height: 155px
+		height: 165px
 
 @keyframes is-close
 	0% 
 		opacity: 1
-		height: 155px
+		height: 165px
 	50% 
 		opacity: 1
 	100% 
