--- a/src/sass/_article.sass
+++ b/src/sass/_article.sass
@@ -55,8 +55,7 @@
 				visibility: visible
 				opacity: 1
 				animation: is-open 1s ease 0s
-				padding-bottom: 15px
-				
+								
 				&:before
 					animation: line-open 1.5s ease forwards 0.5s
 		
@@ -125,7 +124,7 @@
 	display: flex
 	justify-content: space-between
 	align-items: center
-	padding: 40px 0 67px
+	padding: 52px 0 67px
 
 	&__btn
 		opacity: 1
@@ -137,6 +136,7 @@
 
 		+r(380)
 			width: 20%
+			font-size: 10px
 
 		&--is-hidden
 			opacity: 0
@@ -170,12 +170,12 @@
 		opacity: 0
 	100% 
 		opacity: 1
-		height: 165px
+		height: 150px
 
 @keyframes is-close
 	0% 
 		opacity: 1
-		height: 165px
+		height: 150px
 	50% 
 		opacity: 1
 	100% 
